Day 14 extract function